# SoCMake

./: .gitignore  .gitlab-ci.yml  404.html  CMakeLists.txt  CTestConfig.cmake  README.md  SoCMakeConfig.cmake  dummy.txt  index.html  sitemap.xml
cmake/: hwip.cmake  (+1 more)
cmake/build_scripts/uvm-systemc/: CMakeLists.txt  UVM-SystemCConfig.cmake  uvm-systemc_build.cmake  uvm-systemc_questa_build.cmake  uvm-systemc_vcs_build.cmake  uvm-systemc_xcelium_build.cmake
cmake/build_scripts/uvm-systemc/osci/: CMakeLists.txt  UVM-SystemCConfig.cmake
cmake/build_scripts/uvm-systemc/questa/: CMakeLists.txt  UVM-SystemC-QuestaConfig.cmake
cmake/build_scripts/uvm-systemc/vcs/: CMakeLists.txt  UVM-SystemCConfig.cmake
cmake/build_scripts/uvm-systemc/xcelium/: CMakeLists.txt  (+1 more)
docs/: CMakeLists.txt  CONTRIBUTORS  README.md  conf.py  docusaurus.config.js  index.rst  package-lock.json  package.json
docs/api/: conf.py.in
docs/api_documentation/: index.html
docs/build_system/intro/: index.html
docs/category/build-system/: index.html
docs/category/examples/: index.html
docs/docs/: api_documentation.mdx  getting_started.mdx  intro.md
docs/docs/build_system/: _category_.json  intro.mdx
docs/docs/examples/: 0_table_ex.mdx  1_options.mdx  2_linking_ips.mdx  3_simulation.md  4_verilator.mdx  5_mixed_language.mdx  6_dpi-c.mdx  7_systemc.mdx  8_uvm-systemc.mdx  9_cocotb.mdx  _category_.json  cocotb.mdx  dpi-c.mdx  file.dot  linking_ips.mdx  mixed_language.mdx  simulation.md  systemc.mdx  uvm-systemc.mdx  verilator.mdx
docs/examples/linking_ips/: index.html
docs/examples/simulation/: index.html
docs/examples/verilator/: index.html
docs/getting_started/: index.html
docs/intro/: index.html
docs/source/: build_system.rst  quickstart.rst
docs/static/: convert2mp4.sh
examples/dpi-c/: CMakeLists.txt  Vtb__main.cpp
examples/dpi-c/hello/: CMakeLists.txt
examples/ipxact/performance/: CMakeLists.txt
examples/ipxact/props/: CMakeLists.txt
examples/modelsim/dpi/: CMakeLists.txt  tb.sv
examples/modelsim/parallel/: CMakeLists.txt  tb.v
examples/modelsim/simple/: CMakeLists.txt
examples/simple_cocotb/: CMakeLists.txt  python_requirements.txt  simple_cocotb_example.py
examples/simple_cocotb/adder/: CMakeLists.txt  adder.v
examples/simple_mixed_language/: CMakeLists.txt  tb.v
examples/simple_mixed_language/adder/: CMakeLists.txt  adder.vhdl
examples/simple_mixed_language_sc_vlog/: CMakeLists.txt  counter2.h  counter2.v  sc_main.cpp  test.sh  test_counters.v  test_osci.sh
examples/simple_mixed_language_sc_vlog/counter1/: CMakeLists.txt
examples/simple_mixed_language_sc_vlog/counter2/: CMakeLists.txt
examples/simple_mixed_language_sc_vlog/counters/: CMakeLists.txt  vcs_sc_map.map
examples/simple_mixed_language_sc_vlog/mgc/: CMakeLists.txt
examples/simple_mixed_language_sc_vlog/tests/: CMakeLists.txt  sc_main.cpp
examples/simple_sc_sv/: CMakeLists.txt  sc_main.cpp
examples/simple_sc_sv/adder/: CMakeLists.txt  adder.v
examples/simple_verilog/: CMakeLists.txt
examples/simple_vhdl/: CMakeLists.txt  tb.vhdl
examples/systemc/: CMakeLists.txt
examples/uvm-systemc/: CMakeLists.txt  hello_world.cpp
examples/vcs/: CMakeLists.txt  sc_main.cpp
examples/verilator/: CMakeLists.txt  main.cpp
examples/verilator/adder/: CMakeLists.txt  adder.v
tests/: CMakeLists.txt  getcmaketest.cmake
tests/add_ip/: add_ip.cmake  add_ip_1_token.cmake  add_ip_description.cmake  add_ip_fail_2_tokens.cmake  add_ip_fail_3_tokens.cmake  add_ip_fail_4_tokens.cmake  add_ip_fail_too_many_tokens.cmake
tests/alias_dereference/: alias_dereference.cmake
tests/check_languages/: check_languages_additional.cmake  check_languages_fatal.cmake  check_languages_standard.cmake  check_languages_warning.cmake
tests/eda_tests/: CMakeLists.txt
tests/eda_tests/cmake/: eda_test.cmake
tests/ip_compile_definitions/: ip_compile_definitions.cmake  ip_compile_definitions_get_multilang.cmake  ip_compile_definitions_hier.cmake
tests/ip_include_directories/: ip_include_directories.cmake  ip_include_directories_get_multilang.cmake
tests/ip_link/: ip_link.cmake  ip_link1.cmake  ip_link_self_link_fatal.cmake
tests/ip_link/ip_link_different_subdir/: ip_link_different_subdir.cmake
tests/ip_sources/: ip_source_fail.cmake  ip_sources.cmake  ip_sources_get_multilang.cmake
tests/iverilog/: CMakeLists.txt  iverilog.cmake  tb.v
tests/iverilog_multi_top/: top1.v
tests/iverilog_mutlitop/: CMakeLists.txt
tests/peakrdl/: ip2.rdl
tests/peakrdl/print/: CMakeLists.txt  top.rdl
tests/tests/: CMakeLists.txt  getcmaketest.cmake
tests/tests/add_ip/: add_ip.cmake  add_ip_1_token.cmake  add_ip_description.cmake  add_ip_fail_2_tokens.cmake  add_ip_fail_3_tokens.cmake  add_ip_fail_4_tokens.cmake  add_ip_fail_too_many_tokens.cmake  add_ip_lib_FALSE.cmake  add_ip_name_FALSE.cmake  add_ip_vendor_FALSE.cmake  add_ip_version0.cmake
tests/tests/alias_dereference/: alias_dereference.cmake
tests/tests/check_languages/: check_languages_additional.cmake  check_languages_fatal.cmake  check_languages_standard.cmake  check_languages_warning.cmake
tests/tests/help/: help_targets.cmake
tests/tests/ip_compile_definitions/: ip_compile_definitions.cmake  ip_compile_definitions_file_set.cmake  ip_compile_definitions_get_multilang.cmake  ip_compile_definitions_hier.cmake
tests/tests/ip_include_directories/: ip_include_directories.cmake  ip_include_directories_file_set.cmake  ip_include_directories_get_multilang.cmake
tests/tests/ip_link/: CMakeLists.txt  flatten.cmake  ip_link1.cmake  ip_link_self_link_fatal.cmake  ip_link_version_condition.cmake
tests/tests/ip_sources/: ip_source_fail.cmake  ip_sources.cmake  ip_sources_file_set.cmake  ip_sources_get_multilang.cmake  ip_sources_headers.cmake
tests/tests/iverilog/: CMakeLists.txt
tests/tests/iverilog_multi_top/: CMakeLists.txt  top2.v
tests/tests/iverilog_simple_test/: CMakeLists.txt
tests/tests/peakrdl/: CMakeLists.txt
tests/tests/vhier/: CMakeLists.txt  golden.xml
tests/utils/: file_pattern_search.py  test_utils.cmake
tests/vhier/: CMakeLists.txt
(+487 files in other folders)
